--- a/index.html
+++ b/index.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/styles.css">
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <div class="header-logo">
+                Header Logo
+            </div>
+            <div class="header-links">
+                <a href="#">header link one</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
+            </div>
+        </div>
+        <div class="one">
+            one
+        </div>
+        <div class="two">
+            two
+        </div>
+        <div class="three">
+            three
+        </div>
+        <div class="four">
+            four
+        </div>
+        <div class="footer">
+
+        </div>
+    </div>
 </body>
 </html>
