done for the night

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
             </div>
         </div>
         <div class="one">
-            one
+            <div class="website-info">
+
+            </div>
+            <img href="#">
         </div>
         <div class="two">
             two
