filled out first section

--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
         </div>
         <div class="one">
             <div class="website-info">
-
+                <div class="awesome">
+                    This website is awesome
+                </div>
+                <div class="subtext">
+                    This website has some subtext that goes here under the 
+                    main title. It's a smaller font and the color is lower 
+                    contrast
+                </div>
+                <button class="sign-up">Sign Up</button>
             </div>
-            <img href="#">
+            <img src="images/moz.png" alt="filler image">
         </div>
         <div class="two">
             two
