prototype, return later

--- a/index.html
+++ b/index.html
@@ -33,13 +33,67 @@
             <img src="images/moz.png" alt="filler image">
         </div>
         <div class="two">
-            two
+            <div class="random-information">Some random information.</div>
+            <div class="information-containers">
+                <div class="information-container">
+                    <!-- <div class="information-image"> -->
+                        <img width="150px" height="150px" src="images/gen grin.png">
+                    <!-- </div> -->
+                    <div class="information-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="information-container">
+                    <!-- <div class="information-image"> -->
+                        <img width="150px" height="150px" src="images/gen smile.png">
+                    <!-- </div> -->
+                    <div class="information-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="information-container">
+                    <!-- <div class="information-image"> -->
+                        <img width="150px" height="150px" src="images/gen smiley.png">
+                    <!-- </div> -->
+                    <div class="information-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="information-container">
+                    <!-- <div class="information-image"> -->
+                        <img width="150px" height="150px" src="images/gen smug.png">
+                    <!-- </div> -->
+                    <div class="information-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="three">
-            three
+            <div class="quote">
+                This is an inspiring quote, or a testimonial from a customer.
+                Maybe it's just filling up space, or maybe people will actually
+                read it. Who knows? All i know is that it looks nice.
+            </div>
+            <div class="quote-credit">
+                -Thor, God of Thunder
+            </div>
         </div>
         <div class="four">
-            four
+            <div class="call-to-action">
+                <div class="call-to-action-text">
+                    <div class="call-to-action-text-top">
+                        Call to action! It's time!
+                    </div>
+                    <div class="call-to-action-text-bottom">
+                        Sign up for our product by clicking that button 
+                        right over there!
+                    </div>
+                </div>
+                <div class="call-to-action-sign-up">
+                    <button class="sign-up-two">Sign Up</button>
+                </div>
+            </div>
         </div>
         <div class="footer">
             Copyright.
